:sparkles: declaring course card component and using stand alone components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 
 <div class="courses">
-  
+  <course-card/>
   <div class="course-card">
     <div class="course-title">
       Angular Core Deep Dive
